[tool.poetry]
name = "motion-planning"
version = "0.1.0"
description = ""
authors = ["Chetan Parthiban <cparthiban08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.0"
robosuite = "^1.5.1"
mujoco = "^3.3.2"
llvmlite = ">=0.41.0"
numba = ">=0.58.0"
kornia = "^0.8.0"
mink = "^0.0.10"
robosuite-models = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
